--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+# Ignorar archivos de configuración de entorno
+src/environments/environment.ts
+src/environments/environment.prod.ts
+
 # Compiled output
 /dist
 /tmp
