--- a/angular.json
+++ b/angular.json
@@ -44,8 +44,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "50MB",
+                  "maximumError": "10MB"
                 },
                 {
                   "type": "anyComponentStyle",
